# math_trainer

./: .gitignore  README.md  math_history_julie.csv  pyproject.toml  trainer.py  trainer_streamlit.py
