[project]
name = "math_trainer"
version = "0.1.0"
description = ""
authors = [
    {name = "stibala",email = "adam.stibal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
